2004-10-27  Axel Simon <A.Simon@kent.ac.uk>

	* mk/mkDepend.in: Redirect dependencies into .dep/ directory.
	
	* Makefile.am: Now builds libgtk2hs.a. Managed to define rule to
	turn .chs.cpp into .chs, hence renamed all files that need to be
	pre-processed.

	* gtk/*/*.chspp: Renamed to .chs.cpp
	
2004-10-25  Axel Simon <A.Simon@kent.ac.uk>

	* configure.ac: Don't update mk/config.mk.in which no longer
	exists.

	* Makefile.am: Repair automake: Force object files to be in
	subdirectories.

	* aclocal.m4: Removed. This file is regenerated automatically.
	
2004-10-24  Axel Simon <A.Simon@kent.ac.uk>

	* configure.in, configure.ac, Makefile, Makefile.am: Removed old
	and added new versions these. The new build system is based on
	automake. 38 files in gtk/* were pre-processed with cpp. These
	have all been renamed to .chspp.
	
	* tools/hierachyGen/TypeGen.hs: Add newline to help message. Let
	generated file import withForeignPtr which is used by the c2hs
	generated code.

2004-09-04  Axel Simon <A.Simon@kent.ac.uk>

	* Makefile, mk/recurse.mk: Set MAKE_APPS to empty and introduce
	MAKE_DEMOS. Demos are only built on "make all" not on "make
	inplace". Demos are never installed, applications are. The latter
	never did anything since mk/application.mk does not provide an
	install target.
	
2004-08-19  Jens Petersen  <petersen@haskell.org>

	* configure.in (GHC_DOCDIR): Default to unset.

	* mk/library.mk (HADDOCK_BASEDOC_FLAG): New variable to handle
	haddock flag for ghc base documentation BASEDOC_DIR  if GHC_DOCDIR set.

	* gtk/Makefile (EXCLUDE_DOCS): Add Hierarchy.hs

	* sourceview/Makefile (C2HS_EXTRA_FLAGS):  Replaces HIDIRS for c2hs.

	* mogul/Makefile: Add EXCLUDE_DOCS and PREPROC_DOCS for haddock.

	* mk/recurse.mk: Remove $(MAKE_DOCS) dependency from all targets.
	Add html and install-html targets.

	* mk/library.mk (PKGDOCDIR): New variable to hold package doc dir.
	(html): New target that builds packages docs with haddock.  Just